bppackaging/src/objects/Accounting_Data_Migration__c.object
<CustomObject>
    <fields>
        <fullName>Last_Synched_Date__c</fullName>
        <label>Last Synched Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Synched__c</fullName>
        <formula>Last_Synched_Date__c</formula>
        <label>Last Synched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MYOB_Object_Name__c</fullName>
        <label>MYOB Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Data Migration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>MYOB_Object_Name__c</columns>
        <columns>Last_Synched__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{000}</displayFormat>
        <label>Accounting Data Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accountings Data Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>